quicklog/tests/failures/struct_missing_display.stderr
error[E0277]: `SerializeStruct` doesn't implement `std::fmt::Display`
  --> tests/failures/struct_missing_display.rs:12:5
   |
12 |     info!(%s1, "struct does not implement Display");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `SerializeStruct` cannot be formatted with the default formatter
   |
   = help: the trait `std::fmt::Display` is not implemented for `SerializeStruct`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
   = note: this error originates in the macro `format_args` (in Nightly builds, run with -Z macro-backtrace for more info)
